@@ -19,14 +19,14 @@
    "run-ee"                            ["with-profile" "+run,+ee" "run"]
    "run-with-repl"                     ["with-profile" "+run-with-repl" "repl"]
    "run-with-repl-ee"                  ["with-profile" "+run-with-repl,+ee" "repl"]
-   "ring"                              ["with-profile" "+ring" "ring"]
-   "ring-ee"                           ["with-profile" "+ring,+ee" "ring"]
+   ;; "ring"                              ["with-profile" "+ring" "ring"]
+   ;; "ring-ee"                           ["with-profile" "+ring,+ee" "ring"]
    "test"                              ["with-profile" "+test" "test"]
    "test-ee"                           ["with-profile" "+test,+ee" "test"]
    "bikeshed"                          ["with-profile" "+bikeshed" "bikeshed"
                                         "--max-line-length" "205"
                                         ;; see https://github.com/dakrone/lein-bikeshed/issues/41
-                                        "--exclude-profiles" "compare-h2-dbs,dev"]
+                                        "--exclude-profiles" "dev"]
    "check-namespace-decls"             ["with-profile" "+check-namespace-decls" "check-namespace-decls"]
    "eastwood"                          ["with-profile" "+eastwood" "eastwood"]
    "check-reflection-warnings"         ["with-profile" "+reflection-warnings" "check"]
@@ -36,8 +36,6 @@
    "lint"                              ["do" ["eastwood"] ["bikeshed"] ["check-namespace-decls"] ["docstring-checker"] ["cloverage"]]
    "repl"                              ["with-profile" "+repl" "repl"]
    "repl-ee"                           ["with-profile" "+repl,+ee" "repl"]
-   "strip-and-compress"                ["with-profile" "+strip-and-compress,-user,-dev" "run"]
-   "compare-h2-dbs"                    ["with-profile" "+compare-h2-dbs" "run"]
    "uberjar"                           ["uberjar"]
    "uberjar-ee"                        ["with-profile" "+ee" "uberjar"]}
 
@@ -135,7 +133,7 @@
    [org.liquibase/liquibase-core "3.6.3"                              ; migration management (Java lib)
     :exclusions [ch.qos.logback/logback-classic]]
    [org.mariadb.jdbc/mariadb-java-client "2.6.2"]                     ; MySQL/MariaDB driver
-   [org.postgresql/postgresql "42.2.8"]                               ; Postgres driver
+   [org.postgresql/postgresql "42.2.18"]                              ; Postgres driver
    [org.slf4j/slf4j-api "1.7.30"]                                     ; abstraction for logging frameworks -- allows end user to plug in desired logging framework at deployment time
    [org.tcrawley/dynapath "1.1.0"]                                    ; Dynamically add Jars (e.g. Oracle or Vertica) to classpath
    [org.threeten/threeten-extra "1.5.0"]                               ; extra Java 8 java.time classes like DayOfMonth and Quarter
@@ -169,7 +167,6 @@
 
   :jvm-opts
   ["-XX:+IgnoreUnrecognizedVMOptions"                                 ; ignore things not recognized for our Java version instead of refusing to start
-   "-Xverify:none"                                                    ; disable bytecode verification when running in dev so it starts slightly faster
    "-Djava.awt.headless=true"]                                        ; prevent Java icon from randomly popping up in dock when running `lein ring server`
 
   :target-path "target/%s"
@@ -206,7 +203,8 @@
      [ring/ring-mock "0.4.0"]]
 
     :plugins
-    [[lein-environ "1.1.0"]] ; easy access to environment variables
+    [[lein-environ "1.1.0"] ; easy access to environment variables
+     [lein-licenses "LATEST"]]
 
     :injections
     [(require 'pjstadig.humane-test-output)
@@ -246,7 +244,7 @@
      :format-result metabase.junit/format-result}}
 
    :ci
-   {:jvm-opts ["-Xmx2500m"]}
+   {:jvm-opts ["-Xmx2000m"]}
 
    :install
    {}
@@ -274,24 +272,25 @@
                    (metabase.core/-main))
       :timeout 60000}}]
 
+   ;; DISABLED FOR NOW SINCE IT'S BROKEN -- SEE #12181
    ;; start the dev HTTP server with 'lein ring server'
-   :ring
-   [:exclude-tests
-    :include-all-drivers
-    {:dependencies
-     ;; used internally by lein ring to track namespace changes. Newer version contains fix by yours truly with 1000x
-     ;; faster launch time
-     [[ns-tracker "0.4.0"]]
+   ;; :ring
+   ;; [:exclude-tests
+   ;;  :include-all-drivers
+   ;;  {:dependencies
+   ;;   ;; used internally by lein ring to track namespace changes. Newer version contains fix by yours truly with 1000x
+   ;;   ;; faster launch time
+   ;;   [[ns-tracker "0.4.0"]]
 
-     :plugins
-     [[lein-ring "0.12.5" :exclusions [org.clojure/clojure]]]
+   ;;   :plugins
+   ;;   [[lein-ring "0.12.5" :exclusions [org.clojure/clojure]]]
 
-     :ring
-     {:handler      metabase.handler/app
-      :init         metabase.core/init!
-      :async?       true
-      :destroy      metabase.core/destroy
-      :reload-paths ["src"]}}]
+   ;;   :ring
+   ;;   {:handler      metabase.server.handler/app
+   ;;    :init         metabase.core/init!
+   ;;    :async?       true
+   ;;    :destroy      metabase.core/destroy
+   ;;    :reload-paths ["src"]}}]
 
    :with-include-drivers-middleware
    {:plugins
@@ -392,7 +391,7 @@
    :check-namespace-decls
    [:linters-common
     {:plugins               [[lein-check-namespace-decls "1.0.2"]]
-     :check-namespace-decls {:prefix-rewriting true}}]
+     :check-namespace-decls {:prefix-rewriting false}}]
 
    :cloverage
    [:test-common
@@ -412,15 +411,6 @@
    {:auto-clean true
     :aot        :all}
 
-   ;; lein strip-and-compress my-plugin.jar [path/to/metabase.jar]
-   ;; strips classes from my-plugin.jar that already exist in other JAR and recompresses with higher compression ratio.
-   ;; Second arg (other JAR) is optional; defaults to target/uberjar/metabase.jar
-   :strip-and-compress
-   {:aliases      ^:replace {"run" ["run"]}
-    :source-paths ^:replace ["lein-commands/strip-and-compress"]
-    :test-paths   ^:replace []
-    :main         ^:skip-aot metabase.strip-and-compress-module}
-
    ;; Profile Metabase start time with `lein profile`
    :profile
    {:jvm-opts ["-XX:+CITime"                                          ; print time spent in JIT compiler
@@ -431,9 +421,4 @@
    {:main org.h2.tools.Shell}
 
    :generate-automagic-dashboards-pot
-   {:main metabase.automagic-dashboards.rules}
-
-   :compare-h2-dbs
-   {:aliases      ^:replace  {"run" ["run"]}
-    :main         ^:skip-aot metabase.cmd.compare-h2-dbs
-    :source-paths ["test"]}})
+   {:main metabase.automagic-dashboards.rules}})
